--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/pw25s-atividade
 spring.datasource.username=postgres
-spring.datasource.password=mmjcne83
+spring.datasource.password=root
 spring.datasource.driverClassName=org.postgresql.Driver
 
 #Banco Mysql
